[9ntonio][Fix: Text Wrap]

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -139,3 +139,7 @@ a > .header {
 .display-none {
 	display: none;
 }
+
+.text-wrap {
+	text-wrap: pretty !important;
+}
